# openreil

./: AUTHORS  AUTHORS_BAP  COPYING  COPYING_BAP  Makefile.am  README  README.md  autogen.sh  configure.ac  test.py
VEX/: BAP.README  Makefile  OPENREIL.README  bap_patch_20110908.patch
VEX/priv/: guest_arm_toIR.c  main_main.c  main_util.c
capstone/: Makefile  capstone-source.tar.bz2  config.mk
docs/: README.html  README.md
libasmir/: Doxyfile  Makefile.am
libasmir/apps/: Makefile.am  ir_printer.cpp  ir_printer.h  print-ir.cpp  translate-insn.cpp
libasmir/include/: asm_program.h  common.h  disasm.h  exp.h  info.h  irtoir-i386.h  irtoir-internal.h  irtoir.h  irvisitor.h  jumpbuf.h  stmt.h  translate.h  vexmem.h
libasmir/src/: Makefile.am  asm_program.c  common.cpp  disasm-capstone.cpp  disasm-xed.cpp  disasm.cpp  exp.cpp  irtoir-arm.cpp  irtoir-i386.cpp  irtoir.cpp  irtoir_c.cpp  llvm.cpp  memory_data.cpp  ocaml_helpers.c  stmt.cpp  symbols.c  vexir.c  vexmem.c
libasmir/src/old_ir/: exp.cpp  exp_c.cpp  stmt.cpp  stmt_c.cpp
libasmir/src/traces/: pin_common.h  pin_frame.cpp  pin_frame.h  pin_syscalls.h  pin_taint.cpp  pin_taint.h  pin_trace.cpp  pin_trace.h  readtrace.cpp  readtrace.h  reg_mapping.cpp  reg_mapping.h  reg_mapping_pin.cpp  reg_mapping_pin.h  trace.cpp  trace.h  trace_v40.cpp  trace_v40.h  trace_v41.cpp  trace_v41.h  trace_v50.cpp  trace_v50.h  trace_vXX.h  winsyscalls.cpp  winsyscalls.h
libopenreil/: Makefile.am
libopenreil/apps/: Makefile.am  translate-inst.cpp
libopenreil/include/: libopenreil.h  reil_ir.h  reil_translator.h
libopenreil/src/: Makefile.am  libopenreil.ar  libopenreil.cpp  makelib.sh  reil_translator.cpp
pyopenreil/: IR.py  Makefile.am  REIL.py  VM.py  symbolic.py
pyopenreil/arch/: arm.py  x86.py
pyopenreil/scripts/: gdb_reiltrans.py  ida_translate_func.py  kd_reiltrans.py
pyopenreil/src/: Makefile  libopenreil.pxd  setup.py  translator.pyx
pyopenreil/utils/: Asm_x86.py  GDB.py  IDA.py  asm.py  bin_BFD.py  bin_PE.py  kd.py  mongodb.py
tests/: fib.c  fib_arm.elf  fib_x86.elf  fib_x86.pe  md5.c  md5_arm.elf  md5_x86.elf  md5_x86.pe  rc4  rc4.c  rc4_arm.elf  rc4_x86.elf  run_unittest.py  test_fib.py  test_kao.py  test_md5.py  test_rc4.py
xed2-ia32/doc/ref-manual/: xed.tag
xed2-ia32/doc/ref-manual/html/: annotated.html  classes.html  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x68.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x78.html  functions_0x7a.html  functions_vars.html  functions_vars_0x61.html  functions_vars_0x62.html  functions_vars_0x63.html  functions_vars_0x64.html  functions_vars_0x65.html  functions_vars_0x66.html  functions_vars_0x68.html  functions_vars_0x69.html  functions_vars_0x6c.html  functions_vars_0x6d.html  functions_vars_0x6e.html  functions_vars_0x6f.html  functions_vars_0x70.html  (+198 more)
xed2-ia32/examples/: makefile  udhelp.H  udhelp.cpp  xed-disas-elf.H  xed-disas-elf.cpp  xed-disas-hex.H  xed-disas-hex.cpp  xed-disas-macho.H  xed-disas-macho.cpp  xed-disas-pecoff.H  xed-disas-pecoff.cpp  xed-disas-raw.H  xed-disas-raw.cpp  xed-dll-discovery.c  xed-dot-prep.c  xed-dot-prep.h  xed-dot.c  xed-dot.h  xed-enc-lang.H  xed-enc-lang.cpp  xed-ex-agen.c  xed-ex-ild.c  xed-ex-ild2.c  xed-ex1.cpp  xed-ex2.cpp  xed-ex3.cpp  xed-ex4.c  xed-ex5-enc.c  xed-ex6.c  xed-ex7.c  xed-ex8.c  xed-examples-ostreams.H  xed-examples-ostreams.cpp  xed-examples-util.c  xed-examples-util.h  xed-min.c  xed-size.c  xed-symbol-table.H  xed-symbol-table.cpp  xed-tables.c  (+2 more)
xed2-ia32/include/: xed-address-width-enum.h  xed-agen.h  xed-attribute-enum.h  xed-attributes.h  xed-build-defines.h  xed-category-enum.h  xed-chip-enum.h  xed-common-defs.h  xed-common-hdrs.h  xed-convert-table-init.h  xed-decode.h  xed-decoded-inst-api.h  xed-decoded-inst.h  xed-disas.h  xed-encode.h  xed-encoder-gen-defs.h  xed-encoder-hl.h  xed-encoder-iforms.h  xed-error-enum.h  xed-exception-enum.h  xed-extension-enum.h  xed-flag-action-enum.h  xed-flag-enum.h  xed-flags.h  xed-format-options.h  xed-gen-table-defs.h  xed-get-time.h  xed-iclass-enum.h  xed-iform-enum.h  xed-iform-map.h  xed-iformfl-enum.h  xed-ild.h  xed-immdis.h  xed-immed.h  xed-init-pointer-names.h  xed-init.h  xed-inst.h  xed-interface.h  xed-isa-set-enum.h  xed-isa-set.h  (+27 more)
xed2-ia32/misc/: idata.txt
